added scan button and blob header stuff

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,8 +13,14 @@ code {
     monospace;
 }
 
+.blob{
+  width:100px;
+  border-radius:50%;
+}
+
 .Whichanimal{
   height: 100px;
+  width: auto;
   line-height:100px;
   position:absolute;
   top: 0;
@@ -33,4 +39,30 @@ code {
   text-align: center;
   vertical-align: text-bottom;
 
+}
+
+.ScanButton {
+  display:inline-block;
+  margin: 0 auto;
+  width: 100pt;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  vertical-align: text-bottom;
+  background-color: white;
+  border-color:black;
+  border-radius: 10px;
+  padding: 5px;
+
+  font-size: 30px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif, Geneva, Verdana, sans-serif;
+  -webkit-text-stroke-width:0;
+}
+
+.ScanButton:hover{
+  cursor:pointer;
+  background-color:gray;
+  color: white;
 }
