--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,5 @@
 body {
-   /*background-color:#FF0000;*/
+  background-image:url(../assets/background.png);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -15,6 +15,7 @@ code {
 
 .blob{
   width:100px;
+  height: 70px;
   border-radius:50%;
 }
 
