--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -53,6 +53,8 @@ code {
 
   vertical-align: text-bottom;
   background-color: white;
+  border-style:solid;
+  border-width:2px;
   border-color:black;
   border-radius: 10px;
   padding: 5px;
@@ -69,5 +71,23 @@ code {
 }
 
 .ScanMenu {
-  
+  height: 600px;
+  width: 50%;
+  line-height:100px;
+  position:absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+
+  vertical-align: text-bottom;
+  border-style: solid;
+  border-width:2px;
+  border-radius:5%;
+  border-color:black;
+  padding: 5px;
+
+  text-align: center;
+  vertical-align: text-bottom;
 }
