--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -84,10 +84,26 @@ code {
   vertical-align: text-bottom;
   border-style: solid;
   border-width:2px;
-  border-radius:5%;
+  border-radius: 2%;
   border-color:black;
   padding: 5px;
 
+  display:table;
   text-align: center;
-  vertical-align: text-bottom;
+  vertical-align: middle;
+
+}
+
+.UploadMenu {
+  width: 100%;
+  height: 100%;
+
+  display:table-cell;
+  vertical-align:middle;
+
+  border-style: dashed;
+  border-color: black;
+  border-width:2px;
+  border-radius:2%;
+  
 }
